--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ classifiers = ["License :: OSI Approved :: MIT License",
         "Programming Language :: Python :: 3",
         "Topic :: Scientific/Engineering"]
 dynamic = ["version", "description"]
-dependancies = ['flit','pandas']
-
+dependencies  = ['flit','pandas']
+readme = "readme.md"
 [project.urls]
 source="https://github.com/dougransom/pandas_dataframe_convert"
 [project.scripts]
